deploys/2026-08-07-opportunity-campaign-junction/force-app/main/default/objects/Opportunity_Campaign__c/Opportunity_Campaign__c.object-meta.xml
<CustomObject>
    <description>Junction letting one Opportunity belong to many Campaigns. Opportunity.CampaignId (Primary Campaign Source) holds a single value, so tagging a property into a second initiative used to mean overwriting the first: 196 of the 285 properties in the 2026 PAL/ROE refocus cohort already carried SAQ - 25+ MDU Project or ROE - 9-25 MDU Project. CampaignId is left alone as the ORIGINAL source and this object carries every membership, including a mirror of that original.</description>
    <label>Opportunity Campaign</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Opportunity Campaign Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>