deploys/2026-08-07-opportunity-campaign-junction/force-app/main/default/objects/Opportunity_Campaign__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Lookup</type>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Tagged Opportunities</relationshipLabel>
    <relationshipName>Opportunity_Campaigns</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <description>Restrict on delete: a Campaign that still has tagged Opportunities should not be deletable out from under them.</description>
</CustomField>