deploys/2026-08-07-opportunity-campaign-junction/force-app/main/default/objects/Opportunity_Campaign__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <label>Date Added</label>
    <type>Date</type>
    <inlineHelpText>When this property was tagged into the campaign. For backfilled Original Source rows this is the date of the backfill, not the original tagging date, which Salesforce did not record.</inlineHelpText>
</CustomField>