deploys/2026-08-07-opportunity-campaign-junction/force-app/main/default/objects/Opportunity_Campaign__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <inlineHelpText>Set automatically by the load script as &lt;Opportunity Id&gt;-&lt;Campaign Id&gt;. Do not edit.</inlineHelpText>
    <description>Salesforce has no composite unique constraint, so this external id stands in for one. The load script upserts on Key__c, which makes tagging idempotent: re-running it updates rather than creating a second identical tag. Unique also stops a duplicate being created by hand.</description>
</CustomField>