deploys/2026-08-07-opportunity-campaign-junction/force-app/main/default/objects/Opportunity_Campaign__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Tags</relationshipLabel>
    <relationshipName>Opportunity_Campaigns</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
    <description>Lookup rather than master-detail: a master-detail parent cannot be re-parented, and these tags are administrative rather than owned by the Opportunity. Cascade delete so removing an Opportunity does not strand its tags.</description>
</CustomField>