deploys/2026-08-07-opportunity-campaign-junction/force-app/main/default/objects/Opportunity_Campaign__c/fields/Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>Tag_Type__c</fullName>
    <label>Tag Type</label>
    <type>Picklist</type>
    <inlineHelpText>Original Source mirrors Opportunity.CampaignId, the campaign this property first belonged to. Active Cohort is a current initiative it has been added to since.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Source</fullName>
            </value>
            <value>
                <fullName>Active Cohort</fullName>
                <default>true</default>
                <label>Active Cohort</label>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>